@@ -7,7 +7,7 @@ Build Instructions
   - A POSIX-compliant C development environment
   - GNU make version 3.81 or later
   - skalibs version 2.14.3.0 or later: https://skarnet.org/software/skalibs/
-  - execline version 2.9.6.0 or later: https://skarnet.org/software/execline/
+  - execline version 2.9.6.1 or later: https://skarnet.org/software/execline/
   - s6 version 2.13.0.1 or later: https://skarnet.org/software/s6/
 
  This software will run on any operating system that implements
@@ -22,13 +22,7 @@ POSIX.1-2008, available at:
 
  will work for most users.
  It will install the binaries in /bin and the static libraries in
-/usr/lib/s6-rc.
-
- Please note that static libraries in /usr/lib/s6-rc *will not*
-be found by a default linker invocation: you need -L/usr/lib/s6-rc.
-Other skarnet.org software automatically handles that case if the
-default configuration is used, but if you change the configuration,
-remember to use the appropriate --with-lib configure option.
+/usr/lib.
 
  You can strip the binaries and libraries of their extra symbols via
 "make strip" before the "make install" phase. It will shave a few bytes
