@@ -51,7 +51,7 @@ scripts are also run in a controlled environment.
 2.14.3.0 or later. It's a build-time requirement. It's also a run-time
 requirement if you link against the shared version of the skalibs library. </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a> version
-2.9.6.0 or later. It's a build-time <em>and</em> run-time requirement. </li>
+2.9.6.1 or later. It's a build-time <em>and</em> run-time requirement. </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a> version
 2.13.0.1 or later. It's a build-time <em>and</em> run-time requirement. </li>
 </ul>
