@@ -35,8 +35,11 @@ minor and bugfix version changes.
 <ul>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a>
 dependency bumped to 2.14.3.0. </li>
+ <li> <a href="//skarnet.org/software/execline/">execline</a>
+dependency bumped to 2.9.6.1. </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a>
 dependency bumped to 2.13.0.1. </li>
+ <li> Static libraries are installed in <tt>/usr/lib</tt> by default. </li>
 </ul>
 
 <h2> in 0.5.4.3 </h2>
